--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "handlebars": "4.1.0",
+    "@auxilin/eslint-config": "0.1.1",
+    "handlebars": "4.1.2",
     "mailgun-js": "0.22.0"
   },
   "devDependencies": {
-    "all-contributors-cli": "6.0.0",
+    "all-contributors-cli": "6.7.0",
     "babel-eslint": "10.0.1",
-    "eslint": "5.13.0",
-    "eslint-plugin-import": "2.16.0",
+    "eslint": "5.16.0",
+    "eslint-plugin-import": "2.17.3",
     "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4"
+    "eslint-plugin-react": "7.13.0"
   },
   "engines": {
     "node": ">=8.0.0"
