--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@auxilin/email-service",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": "Auxilin",
   "description": "Mailgun wrapper",
   "private": false,
@@ -21,13 +21,14 @@
     "mailgun-js": "0.22.0"
   },
   "devDependencies": {
-    "@auxilin/eslint-config": "0.1.1",
-    "all-contributors-cli": "6.7.0",
-    "babel-eslint": "10.0.1",
-    "eslint": "5.16.0",
-    "eslint-plugin-import": "2.17.3",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.13.0"
+    "@auxilin/eslint-config": "0.2.0",
+    "all-contributors-cli": "6.8.1",
+    "babel-eslint": "10.0.2",
+    "eslint": "6.1.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "1.7.0"
   },
   "engines": {
     "node": ">=8.0.0"
